[package]
name = "tsotest"
version = "0.2.0"
authors = ["losfair <zhy20000919@hotmail.com>"]
edition = "2018"
license = "MIT"
description = "Test Total Store Ordering status on your CPU."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
apple-tso = ["sysctl"]

[dependencies]
sysctl = { version = "0.4", optional = true }
